# onepassword-sdk-python

./: Makefile  pyproject.toml  setup.py
.github/workflows/: prep-release.yml  release.yml  wheels.yml
scripts/: prep-release.sh  python_release.sh  release.sh
src/onepassword/: build_number.py  core.py  defaults.py  items.py  secrets.py  test_client.py  types.py  version-build
src/release/: RELEASE-NOTES  version.py
src/release/scripts/: build-wheels.sh  prep-release.sh  release.sh
